package parkhouse.commands;

public interface ICommand {

    /*
    Author: tpapen2s
     */

    void execute();
    void undo();

}
